made a whole bunch of changes in the css file fixing the formatting of the nav bar depending on the media query. Also updated the formatting of the main home page so it doesn't squish

--- a/css/main.css
+++ b/css/main.css
@@ -98,12 +98,13 @@ nav li a:hover:not(.active) {
 
 .sonificationpage nav li {
   float:left;
+  width: 130px;
 }
 
 .sonificationpage nav li a {
   display: block;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 10px;
   text-decoration: none;
 }
 
@@ -122,12 +123,13 @@ nav li a:hover:not(.active) {
 
 .aboutpage nav li {
   float:left;
+  width: 130px;
 }
 
 .aboutpage nav li a {
   display: block;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 10px;
   text-decoration: none;
 }
 
@@ -146,12 +148,13 @@ nav li a:hover:not(.active) {
 
 .curriculumpage nav li {
   float:left;
+  width: 130px;
 }
 
 .curriculumpage nav li a {
   display: block;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 10px;
   text-decoration: none;
 }
 
@@ -184,6 +187,15 @@ nav li a:hover:not(.active) {
     background-color: rgba(0,0,0,.125);
   }
 
+  .sonificationpage nav li a {
+    text-align: left;
+  }
+  .aboutpage nav li a {
+    text-align: left;
+  }
+  .curriculumpage nav li a {
+    text-align: left;
+  }
   .home nav {
     position: inherit;
     height: inherit;
@@ -191,15 +203,16 @@ nav li a:hover:not(.active) {
     width: auto;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1000px;
+    width: 1000px;
   }
 
 
   .home nav li {
     display: inline-block;
-    width: 24%;
+    width: 225px;
     float:left;
-    margin-right: 1%;
+    margin-left: .5%;
+    margin-right: .5%;
   }
 
   .home nav li:last-of-type {
@@ -209,11 +222,12 @@ nav li a:hover:not(.active) {
   .home nav li a {
     display: block;
     color: #000;
-    padding: 150% 20px 10px 10px;
+    padding: 300px 10px 400px 10px;
     font-size: 25px;
     text-align: center;
     text-decoration: none;
     height: 80vh;
+    min-width: 30px
     max-height: 800px;
     font-weight: bold;
     text-transform: uppercase;
